# nedis

./: .coveragerc  .dockerignore  .gitignore  AUTHORS.md  AUTHORS.rst  Dockerfile  LICENSE.txt  README.md  README.rst  docker-entrypoint.sh  environment.yml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.md  index.rst
notebooks/: 01_exp_regression.ipynb  02_exp_classification.ipynb  03_synthetic.ipynb  04_figure1.ipynb  05.01_supplement_clustering.ipynb  05.02_supplement_overlap.ipynb  05.03_supplement_comparison.ipynb  05.04_supplement_custom-clustering.ipynb  05.05_supplement_non-linear-correlation.ipynb  05.06_perturbation_analysis_noise.npy  05.07_supplement_exp_regression_stable.ipynb  05.07_supplement_exp_regression_stable_evaluate.ipynb  05.07_supplement_exp_regression_stable_run.sh
src/nalabcordis/: skeleton.py
src/nedis/: base.py  experiments.py  utils.py  visualization.py
src/nedis/cluster/: leidenalg.py  louvain.py
src/nedis/cordis/: clustering.py  default.py  disruption.py  estimator.py  filtering.py  optimization.py  scoring.py  transformer.py  utils.py
src/nedis/cordis/deprecated/: transformer.py
src/nedis/data/: synthetic.py  tasks.py  utils.py
src/nedis/data/datasets/: multiomics.py  pree.py
tests/: conftest.py  test_base.py  test_clustering.py  test_cordis.py  test_cordis_deprecated.py  test_skeleton.py
