# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = nedis
description = Network-based disruption analysis of biological coordination
author = Martin Becker
author_email = becker@informatik.uni-wuerzburg.de
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/bckrlab/nedis
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/bckrlab/nedis/README.md
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# If you have trouble with versioning, 
# we included the verson numbers used for development in [options.extras_require].
install_requires =
    importlib-metadata; python_version<"3.8"
    numpy
    scipy
    scikit-learn
    pandas
    matplotlib
    seaborn
    networkx
    python-igraph<=0.9.9 # crashed kernels with hihger versions (tried 0.11.9 and 1.0.0)
    leidenalg

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Version numbers used for development (Python 3.9.10).
# Install with pip install nedis[original].
# If this still does not work, 
# please check the `Dockerfile` and the `environment.yml` for the exact versions used for development.
original =
    ipykernel==6.7.0
    numpy==1.22.1
    scipy==1.7.3
    scikit-learn==1.0.2
    pandas==1.4.0
    seaborn==0.11.2
    matplotlib==3.5.1
    networkx==2.6.3
    python-igraph==0.9.8
    leidenalg==0.8.8


# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = nedis.module:function
# For example:
# console_scripts =
#     fibonacci = nedis.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov nedis --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.1
package = nedis
extensions = 
